LPD-93575 Detect missing alt text on images during crawler scans
